k8s/kong/kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
        - name: kong
          image: kong:latest
          command: ["kong", "migrations", "bootstrap"]
          ports:
            - containerPort: 8000
            - containerPort: 8001
            - containerPort: 8443
            - containerPort: 8444
---
apiVersion: v1
kind: Service
metadata:
  name: kong
spec:
  selector:
    app: kong
  ports:
    - name: proxy
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: admin
      protocol: TCP
      port: 8001
      targetPort: 8001
    - name: proxy-ssl
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: admin-ssl
      protocol: TCP
      port: 8444
      targetPort: 8444
