k8s/kong/kong-pvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong
  namespace: default
spec:
  selector:
    app: kong
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
