k8s/kong/kong-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong
  namespace: default
spec:
  selector:
    app: kong
  ports:
    - name: proxy
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: admin
      protocol: TCP
      port: 8001
      targetPort: 8001
    - name: proxy-ssl
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: admin-ssl
      protocol: TCP
      port: 8444
      targetPort: 8444
