k8s/kong/kongdb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kongdb
  name: kongdb
  namespace: default
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: kongdb
  type: ClusterIP
